# MangaAutoTranslator

./: .gitignore  LICENSE  README.md  pyproject.toml
manga_auto_translator/: bubble_segmentation.py  cli_args.py  data_structure.py  datastructure.py  file_ops.py  main.py  ocr.py  pipeline.py  post_process_scan.py  postprocess_scan.py  translation.py  utils.py
manga_auto_translator/postProcessSegmentation/: postProcessSegmentation.py
manga_auto_translator/segmentation/: UNet.py  config.py  segmentation.py  train.py
manga_auto_translator/segmentation_Unet/: predict.py
manga_auto_translator/segmentation_Unet/outputs/: test_paths.txt  unet_tgs_salt_model8.pth
manga_auto_translator/segmentation_Unet/pyimagesearch/: config.py  model8.py
tests/: test_data_structure.py
