[tool.poetry]
name = "manga-auto-translator"
version = "0.1.0"
description = "CIA collaborative project on automatic manga translation from japanese to english"
authors = ["CIA"]
readme = "README.md"
packages = [{include = "manga_auto_translator"}]

[tool.poetry.scripts]
translate = "manga_auto_translator.main:cli"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
poethepoet = "^0.24.0"
ipykernel = "^6.25.2"
numpy = "^1.26.1"
click = "^8.1.7"
pillow = "^10.1.0"
pytest = "^7.4.2"
manga-ocr = "^0.1.11"
deep-translator = "^1.11.4"

[tool.poe.tasks]
torch-cuda = "pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"